# ml4shiptelemetry

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pdoc.yml  python-app.yml
analysis/: xai_analysis.ipynb
src/: cv_params.json
src/ml4shiptelemetry/: RFRegressorModel.py  __main__.py  dataloader.py  main.py
test/: test_main.py
