[project]
name = "ml4shiptelemetry"
version = "0.0.1"
authors = [
  { name="Antony Zappacosta", email="antony.zappacosta@dlr.de" },
  { name="Vytautas Jancauskas", email="vytautas.jancauskas@dlr.de" },
]
description = "Ship data processing with Machine Learning"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pytest",
    "click",
    "pdoc",
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn"
]

[project.urls]
Homepage = "https://github.com/DLR-MF-DAS/ml4shiptelemetry"
Issues = "https://github.com/DLR-MF-DAS/ml4shiptelemetry/issues"
